fixed font and fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     background-color: #905EA9;
+    font-family: 'Tiny5', sans-serif;
 }
 
 
@@ -11,8 +12,10 @@ body {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding-left: 10px;
+  padding-left: 23px;
+  padding-top: 5px;
   app-region: drag;
+  font-size: 20px;
 }
 
 .appBody{
@@ -22,10 +25,19 @@ body {
 }
 .innerWin{
   background: #A884F3;
-  justify-content: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  height:417px;
+  height:412px;
   width: 345px;
   margin-top: 5px;
   border: 5px solid #6B3E75;
+}
+
+
+.startButton{
+  background: none;
+  font-family: "Tiny5";
+  font-size: 12pt;
 }
